[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/3d/buildings/exports/IndustrialBuilding.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/interactables/BuildingBody.gd" type="Script" id=2]
[ext_resource path="res://scenes/particles/BuildingParts.tscn" type="PackedScene" id=3]
[ext_resource path="res://fire1.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/audio/explode2.ogg" type="AudioStream" id=5]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 8, 8 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 5, 5, 5 )

[node name="industrial_building" type="Spatial"]

[node name="BuildingBody" type="StaticBody" parent="." groups=["Interactable"]]
script = ExtResource( 2 )

[node name="buidlingModel" type="Spatial" parent="BuildingBody"]
transform = Transform( 1.25, 0, 0, 0, 1.25, 0, 0, 0, 1.25, 0, 0, 0 )

[node name="IndustrialBuilding" parent="BuildingBody/buidlingModel" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )

[node name="IndustrialBuilding2" parent="BuildingBody/buidlingModel" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4, 0, 0 )

[node name="IndustrialBuilding3" parent="BuildingBody/buidlingModel" instance=ExtResource( 1 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, -4 )

[node name="IndustrialBuilding4" parent="BuildingBody/buidlingModel" instance=ExtResource( 1 )]
transform = Transform( 1.94707e-07, 0, -1, 0, 1, 0, 1, 0, 1.94707e-07, -4, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="BuildingBody/buidlingModel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="BuildingBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
shape = SubResource( 3 )

[node name="fire1" parent="BuildingBody" instance=ExtResource( 4 )]
transform = Transform( 12.7279, 0, 12.7279, 0, 18, 0, -12.7279, 0, 12.7279, 0, 14.33, 0 )
visible = false

[node name="explodeSound" type="AudioStreamPlayer" parent="BuildingBody"]
stream = ExtResource( 5 )
pitch_scale = 0.91

[node name="BuildingParts" parent="." instance=ExtResource( 3 )]
